chore: add translations

--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -38,6 +38,14 @@
     "messages.errors.failed_generate": "Failed to generate configuration: {{.error}}",
     "messages.errors.failed_deploy": "Failed to start deployment: {{.error}}",
     "messages.errors.failed_complete": "Failed to complete setup: {{.error}}",
+    "messages.errors.setup_token_required": "Setup token is required",
+    "messages.errors.invalid_or_expired_token": "Invalid or expired setup token",
+    "messages.errors.invalid_setup_token": "Invalid setup token",
+    "messages.errors.setup_token_expired": "Setup token has expired",
+    "messages.errors.token_ip_mismatch": "Setup token can only be used from IP: {{.ip}}",
+    "messages.errors.token_not_found": "Token not found",
+    "messages.errors.setup_token_not_found": "Setup token not found",
+    "messages.errors.config_validation_failed_count": "Configuration validation failed: {{.count}} errors",
     "validation.database.host_error": "Please enter a valid hostname or IP address",
     "validation.database.port_error": "Port must be between 1 and 65535",
     "validation.database.name_error": "Database name must start with a letter and contain only letters, numbers, and underscores (max 63 characters)",
@@ -119,6 +127,12 @@
     "messages.failed_read_file": "Failed to read file",
     "messages.invalid_jwt_key_file": "Invalid JWT private key file: %v",
     "messages.jwt_key_file_uploaded_successfully": "JWT key file uploaded successfully",
+    "messages.geoip_status_checked": "GeoIP file status checked",
+    "messages.errors.geoip_file_unavailable": "GeoIP database file no longer available. The uploaded file may have been cleared. Please re-upload your GeoIP database file and try again",
+    "messages.errors.invalid_pem_format": "Invalid PEM format",
+    "messages.errors.invalid_pkcs8_key": "Invalid PKCS#8 private key",
+    "messages.errors.invalid_pkcs1_key": "Invalid PKCS#1 RSA private key",
+    "messages.errors.unsupported_pem_block_type": "Unsupported PEM block type: {{.type}}. Expected 'PRIVATE KEY' (PKCS#8) or 'RSA PRIVATE KEY' (PKCS#1)",
     "messages.testing_connections": "Testing connections...",
     "messages.some_connection_tests_failed": "Some connection tests failed",
     "messages.all_connection_tests_passed": "All connection tests passed",
