--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -38,6 +38,14 @@
     "messages.errors.failed_generate": "生成配置失败：{{.error}}",
     "messages.errors.failed_deploy": "启动部署失败：{{.error}}",
     "messages.errors.failed_complete": "完成设置失败：{{.error}}",
+    "messages.errors.setup_token_required": "需要设置令牌",
+    "messages.errors.invalid_or_expired_token": "无效或已过期的设置令牌",
+    "messages.errors.invalid_setup_token": "无效的设置令牌",
+    "messages.errors.setup_token_expired": "设置令牌已过期",
+    "messages.errors.token_ip_mismatch": "设置令牌只能从IP地址使用：{{.ip}}",
+    "messages.errors.token_not_found": "未找到令牌",
+    "messages.errors.setup_token_not_found": "未找到设置令牌",
+    "messages.errors.config_validation_failed_count": "配置验证失败：{{.count}}个错误",
     "validation.database.host_error": "请输入有效的主机名或IP地址",
     "validation.database.port_error": "端口必须在 1 到 65535 之间",
     "validation.database.name_error": "数据库名称必须以字母开头，只能包含字母、数字和下划线（最大63个字符）",
@@ -119,6 +127,12 @@
     "messages.failed_read_file": "读取文件失败",
     "messages.invalid_jwt_key_file": "无效的JWT私钥文件：%v",
     "messages.jwt_key_file_uploaded_successfully": "JWT密钥文件上传成功",
+    "messages.geoip_status_checked": "GeoIP文件状态已检查",
+    "messages.errors.geoip_file_unavailable": "GeoIP数据库文件不可用。上传的文件可能已被清除。请重新上传GeoIP数据库文件并重试",
+    "messages.errors.invalid_pem_format": "无效的PEM格式",
+    "messages.errors.invalid_pkcs8_key": "无效的PKCS#8私钥",
+    "messages.errors.invalid_pkcs1_key": "无效的PKCS#1 RSA私钥",
+    "messages.errors.unsupported_pem_block_type": "不支持的PEM块类型：{{.type}}。期望'PRIVATE KEY'（PKCS#8）或'RSA PRIVATE KEY'（PKCS#1）",
     "messages.testing_connections": "正在测试连接...",
     "messages.some_connection_tests_failed": "部分连接测试失败",
     "messages.all_connection_tests_passed": "所有连接测试通过",
